# tinystories-rs

./: Cargo.toml
examples/: train.rs
src/: inference.rs  model.rs  training.rs
src/data/: batcher.rs  dataset.rs  tokenizer.rs
