[package]
name = "tinystories-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", features=["train", "wgpu", "dataset", "tch"] }
serde = { version = "1.0", features = ["std", "derive"] }
tokenizers = {version = "0.15.0", default-features = false, features = [
  "onig",
  "http",
]}
derive-new = "0.6.0"
log = "0.4.20"